==> mioband/band/wrist/esp32/brasletSmart/lib/MPU9250_usr/mpu9250_usr.cpp <==
#include "mpu9250_usr.h"

uint8_t I2Cx_ReadData(uint8_t Address, uint8_t Register, uint8_t Nbytes, uint8_t* Data) {
    Wire.beginTransmission(Address);
    Wire.write(Register);
    uint8_t result = Wire.endTransmission();
    if (result != 0) {
        return result;
    }

    Wire.requestFrom(Address, Nbytes);
    uint8_t index = 0;
    while (Wire.available()) {
        uint8_t d = Wire.read();
        if (index < Nbytes) {
        Data[index++] = d;
        }
    }
    return 0;
}

void I2Cx_WriteData(uint16_t Address, uint8_t Register, uint8_t Value) {
    Wire.beginTransmission(Address);
    Wire.write(Register);
    Wire.write(Value);
    Wire.endTransmission();
}

void MPU9250_writeReg(uint16_t Address, uint8_t Register, uint8_t value)
{
    Wire.beginTransmission(Address);
    Wire.write(Register);
    Wire.write(value);
    Wire.endTransmission();
}

void MPU9250_writeReg16Bit(uint16_t Address, uint8_t Register, uint16_t value)
{
	uint8_t buf[2];
	buf[0] = (uint8_t) (value >> 8);
	buf[1] = (uint8_t) (value & 0xFF);
	Wire.beginTransmission(Address);
    Wire.write(Register);
    Wire.write(buf, 2);
    Wire.endTransmission();
}

void MPU9250_writeReg32Bit(uint16_t Address, uint8_t Register, uint32_t value)
{
	uint8_t buf[4];
	buf[0] = (uint8_t) (value >> 24);
	buf[1] = (uint8_t) (value >> 16);
	buf[2] = (uint8_t) (value >> 8);
	buf[3] = (uint8_t) (value & 0xFF);
	Wire.beginTransmission(Address);
    Wire.write(Register);
    Wire.write(buf, 4);
    Wire.endTransmission();
}

uint8_t MPU9250_readReg(uint16_t Address, uint8_t Register)
{
    uint8_t value;
    Wire.beginTransmission(Address);
    Wire.write(Register);
    uint8_t result = Wire.endTransmission();
    if (result != 0) {
        return result;
    }
    Wire.requestFrom(Address, sizeof(byte));
    value = Wire.read();
    return value;
}

void MPU9250_writeMulti(uint16_t Address, uint8_t Register, uint8_t* src, uint8_t count)
{
    Wire.beginTransmission(Address);
    Wire.write(Register);
    for (int i = 0; i < count; ++i)
    {
        Wire.write((uint8_t)src[i]);
    }
    
    Wire.endTransmission();
}

uint8_t MPU9250_readMulti(uint16_t Address, uint8_t Register, uint8_t * Data, uint8_t count)
{
    Wire.beginTransmission(Address);
    Wire.write(Register);
    uint8_t result = Wire.endTransmission();
    if (result != 0) {
        return result;
    }

    Wire.requestFrom(Address, count);
    uint8_t index = 0;
    while (Wire.available()) {
        uint8_t d = Wire.read();
        if (index < count) {
            Data[index++] = d;
        }
    }
    return 0;
}
