==> IgorKaan/stm32f405-ros-core-controller/Src/mpu9250_usr.c <==
#include "mpu9250_usr.h"
#include "stm32f4xx_hal.h"

uint8_t I2Cx_ReadData(uint16_t Addr, uint8_t Reg) {
	HAL_StatusTypeDef status = HAL_OK;
	value = 0;
	status = HAL_I2C_Mem_Read(&hi2c1, Addr<<1, Reg, I2C_MEMADD_SIZE_8BIT, &value, 1, 0x10000);
	if(status != HAL_OK)
	{
	    error();
	}
	return value;
}

void I2Cx_WriteData(uint16_t Addr, uint8_t Reg, uint8_t Value) {
	HAL_StatusTypeDef status = HAL_OK;
    status = HAL_I2C_Mem_Write(&hi2c1, Addr, (uint16_t)(Reg<<1), I2C_MEMADD_SIZE_8BIT, &Value, 1, 0x10000);
    if(status != HAL_OK)
    {
    error();
    }
}

void MPU9250_writeReg(uint16_t Addr, uint8_t reg, uint8_t value)
{
	uint8_t buf[2];
	buf[0] = reg;
	buf[1] = value;
	HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)(Addr << 1), buf, 2, 1000);
}

void MPU9250_writeReg16Bit(uint16_t Addr, uint8_t reg, uint16_t value)
{
	uint8_t buf[3];
	buf[0] = reg;
	buf[1] = (uint8_t) (value >> 8);
	buf[2] = (uint8_t) (value & 0xFF);
	HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)(Addr << 1), buf, 3, 1000);
}

void MPU9250_writeReg32Bit(uint16_t Addr, uint8_t reg, uint32_t value)
{
	uint8_t buf[5];
	buf[0] = reg;
	buf[1] = (uint8_t) (value >> 24);
	buf[2] = (uint8_t) (value >> 16);
	buf[3] = (uint8_t) (value >> 8);
	buf[4] = (uint8_t) (value & 0xFF);
	HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)(Addr << 1), buf, 5, 1000);
}

uint8_t MPU9250_readReg(uint16_t Addr, uint8_t reg)
{
  uint8_t value;
  HAL_I2C_Mem_Read(&hi2c1, (uint16_t)(Addr << 1), reg, 1, &value, 1, 1000);
  return value;
}

void MPU9250_writeMulti(uint16_t Addr, uint8_t reg, uint8_t* src, uint8_t count)
{
	uint8_t data_index[1];
	data_index[0] = reg;
	HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)(Addr << 1), data_index, 1, 1000);
	HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)(Addr << 1), src, count, 1000);
}

void MPU9250_readMulti(uint16_t Addr, uint8_t reg, uint8_t * dst, uint8_t count)
{
	HAL_I2C_Mem_Read(&hi2c1, (uint16_t)(Addr << 1), reg, 1, dst, count, 1000);
}
